# scream

./: .gitignore  README.md  pyproject.toml
scripts/: download_tinyllama.sh
src/localflow/: __main__.py  app.py  audio.py  cli.py  commands.py  config.py  enhance.py  gui.py  history.py  output.py  transcribe.py
